Fix button sticking effect on mobile devices

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -47,6 +47,16 @@
   .link {
     color: #222;
   }
+  
+  @media (hover: none) {
+    .link:hover {
+      color: #222;
+    }
+    .link-active:hover {
+      color: purple;
+    }
+  }
+
   .btn-outline-secondary:hover {
     background-color: transparent;
   }
