--- a/src/components/QuestionList.css
+++ b/src/components/QuestionList.css
@@ -22,6 +22,12 @@
   border-radius: 35px;
   margin-bottom: 15px;
 }
+@media (hover: none) {
+  .question-toggle:hover {
+    border-color: #2222221f;
+  }
+}
+
 .toggle-active {
   color: purple;
   font-weight: bold;
